Dark Mode Fixes, Selected text fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
   --color-primary: #027bff;
 
   --color-text: #797979;
+  --color-text-large: rgba(0, 0, 0, 0.1);
   --color-link: #000000;
   --color-body-background: #fafafa;
   --color-input-background: #f4f4f4;
@@ -38,11 +39,6 @@ body {
   font-size: var(--size-text);
   color: var(--color-text);
   background-color: var(--color-body-background);
-
-  &::selection {
-    background-color: var(--color-primary);
-    color: var(--color-light);
-  }
 }
 
 div,
@@ -50,6 +46,7 @@ section {
   display: block;
 }
 
+@import "utils/base";
 @import "utils/layout";
 @import "utils/typography";
 @import "utils/icons";
