--- a/src/scss/utils/_typography.scss
+++ b/src/scss/utils/_typography.scss
@@ -14,7 +14,7 @@
 }
 
 .is-huge {
-  color: var(--color-light);
+  color: var(--color-text-large);
   font-size: 70px;
   margin-bottom: 1rem;
 
